# SecureRAGPipeline

./: .gitattributes  .gitignore  LICENSE  README.md  audit_events.jsonl  custom_types.py  data_loader.py  main.py  pyproject.toml  security_audit.py  security_ingestion.py  security_output_filter.py  security_retrieval_policy.py  security_safe_context.py  streamlit_app.py  vector_db.py
docs/: roadmap.md  runtime-diagrams.md  security-architecture.md
evals/promptfoo/: README.md
evals/promptfoo/datasets/: prompt_injection_cases.csv  retrieval_authz_cases.csv
evals/promptfoo/scenarios/: prompt_injection.yaml  retrieval_authz.yaml
src/ragagent/: __init__.py
src/ragagent/app/: __init__.py  inngest_app.py  streamlit_app.py
src/ragagent/app/ui/: audit_panel.py  (+4 more)
src/ragagent/clients/: __init__.py
src/ragagent/ingestion/: data_loader.py  embeddings.py  loader.py
src/ragagent/models/: policy.py  results.py
src/ragagent/security/: __init__.py  audit.py  ingestion_scanner.py  output_filter.py  retrieval_policy.py  safe_context.py
src/ragagent/storage/: qdrant_store.py
src/ragagent/workflows/: __init__.py  ingest_pdf.py  query_pdf.py
src/secureragpipeline/: __init__.py  config.py
src/secureragpipeline/app/: inngest_app.py  streamlit_app.py
src/secureragpipeline/ingestion/: loader.py
src/secureragpipeline/models/: payloads.py  policy.py
tests/: __init__.py  test_security_pipeline.py
tests/integration/: test_ingest_workflow.py
tests/unit/: __init__.py  test_ingestion_scanner.py  test_output_filter.py  test_query_workflow.py  test_retrieval_policy.py
(+14 files in other folders)
